<resources>
    <string name="app_name">Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="new_project_et_title">Pick a name for your project</string>
    <string name="ok_button_text">Ok</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="project_name_not_chosen">Please enter a name first</string>
    <string name="task_title">Task Title</string>
    <string name="description">Description</string>
    <string name="pick_date">Pick a Date</string>
    <string name="task_name_not_chosen">Please enter a name first</string>
    <string name="in_review">Already in review</string>
    <string name="submit_q_a">Submit for QA</string>
    <string name="already_submit_q_a">Submitted for QA</string>
    <string name="changes_done">Your changes have been successfully applied</string>
    <string name="add_comment">Add a comment</string>
    <string name="comments">Comments</string>
    <string name="name">Name</string>
    <string name="comment">Leave a comment</string>
    <string name="no_name">Enter a name</string>
    <string name="no_comment">Enter a comment</string>
</resources>
