<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:text="@string/task_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:gravity="left|center_vertical"/>


    <EditText
        android:id="@+id/create_task_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textColor="@color/etTextColor"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:text="@string/description"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:gravity="left|center_vertical"/>


    <EditText
        android:id="@+id/create_task_description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textColor="@color/etTextColor"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:text="@string/pick_date"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:gravity="left|center_vertical"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_task_date_picker" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/create_task_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttons_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cancel_button_text"
            android:textColor="@color/buttonTextColor"
            android:scaleY="0.8"
            android:scaleX="0.8"/>

        <Button
            android:id="@+id/create_task_ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttons_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/ok_button_text"
            android:textColor="@color/buttonTextColor" />

    </LinearLayout>
</LinearLayout>
</ScrollView>