<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.DashBoardActivity"
    tools:showIn="@layout/details_layout"
    android:background="@color/bgColor">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="@string/task_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:gravity="left|center_vertical"/>


        <EditText
            android:id="@+id/details_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/etTextColor"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="@string/description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:gravity="left|center_vertical"/>


        <EditText
            android:id="@+id/details_description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/etTextColor"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="@string/pick_date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:gravity="left|center_vertical"/>

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/details_date_picker"
            android:calendarViewShown="false"
            />

        <Button
            android:id="@+id/details_review_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textColor="@color/buttonTextColor"
            android:padding="@dimen/text_padding"/>
        <LinearLayout
            android:id="@+id/comments_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>

    </ScrollView>
</LinearLayout>